--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+  
+  <html>
+ <head>
+  <meta charset="utf-8">
+ <title>
+  ...
+</title>
+ </head>
+<body>
+ 
+<h3>What is your YouTube channel's exact name?</h3>
 
+<input type="text" id="myText" value="">
+
+<button onclick="myFunction()">Submit</button>
+
+<p id="demo"></p>
+  
+<script src = "javascript.js">
+
+</script>
+</body> 
+  </html>
