--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
  <head>
   <meta charset="utf-8">
  <title>
-  ...
+  Rolling Tamers
 </title>
- </head>
+.main-title {
+   font-family:"Ginto Nord","Whitney","Helvetica Neue","Helvetica","Arial",sans-serif; 
+ }
+   
+<style>    
+  
+</style>
+    
+</head>
 <body>
  
-<h3>What is your YouTube channel's exact name?</h3>
+<h3 class = "main-title">What is your YouTube channel's exact name?</h3>
 
 <input type="text" id="myText" value="">
 
