--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <style>    
 .main-title {
    font-family:"Ginto Nord","Whitney","Helvetica Neue","Helvetica","Arial",sans-serif; 
- }  
+   font-weight: 800;
+   line-height: 95%;
+   text-transform: uppercase;
+   text-rendering: geometricPrecision;
+  }  
 </style>
     
 </head>
