--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
  
-<h3 class = "main-title">What is your YouTube channel's exact name?</h3>
+<h1 class = "main-title">Hey there!</h1>
 
 <input type="text" id="myText" value="">
 
