--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <head>
   <meta charset="utf-8">
  <title>
-  Rolling Tamers
+  Aquatic Tridents
 </title>
 <style>    
 .main-title {
@@ -14,6 +14,12 @@
    text-transform: uppercase;
    text-rendering: geometricPrecision;
   }  
+  
+body { 
+background-color: rgb(44, 47, 51);
+}
+
+   
 </style>
     
 </head>
