--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
    line-height: 95%;
    text-transform: uppercase;
    text-rendering: geometricPrecision;
+   font-size: 56px;
+   color: white;
   }  
   
 body { 
