--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    text-rendering: geometricPrecision;
    font-size: 56px;
    color: white;
-   margin: auto;
+   text-align: center;
   }  
   
 body { 
