--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </title>
 <style>    
 .main-title {
+   font-size: 56px;
    font-family:"Ginto Nord","Whitney","Helvetica Neue","Helvetica","Arial",sans-serif; 
    font-weight: 800;
+   font-size: 44px;
+   font-size: clamp(24px,5vw,44px);
    line-height: 95%;
    text-transform: uppercase;
    text-rendering: geometricPrecision;
-   font-size: 56px;
    color: white;
    text-align: center;
   }  
