--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
    text-rendering: geometricPrecision;
    color: white;
    text-align: center;
-  }  
-  
+}  
+
 body { 
 background-color: rgb(44, 47, 51);
 }
 
-   
+.ptextarea {
+   margin-top: 40px;
+   font-family: 'Whitney';
+}  
 </style>
     
 </head>
@@ -30,11 +33,9 @@ background-color: rgb(44, 47, 51);
  
 <h1 class = "main-title">Hey there!</h1>
 
-<input type="text" id="myText" value="">
-
-<button onclick="myFunction()">Submit</button>
-
-<p id="demo"></p>
+<div class = "ptextarea">
+<p>Hello! We glady invite you to our server, Aquatic Tridents! Lead by Triton and Marblex, our clan is:</p>
+</div>
   
 <script src = "javascript.js">
 
