--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@ background-color: rgb(44, 47, 51);
 .ptextarea {
    margin-top: 40px;
    font-family: 'Whitney';
+   color:white;
+   font-size: clamp(16px,2vw,20px);
+   line-height: 1.625;
+   text-align: center;
 }  
 </style>
     
