--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ background-color: rgb(44, 47, 51);
 
 .ptextarea {
    margin-top: 40px;
-   font-family: 'Whitney';
+   font-family: sans-serif;
    color:white;
    font-size: clamp(16px,2vw,20px);
    line-height: 1.625;
@@ -39,6 +39,13 @@ background-color: rgb(44, 47, 51);
 
 <div class = "ptextarea">
 <p>Hello! We glady invite you to our server, Aquatic Tridents! Lead by Triton and Marblex, our clan is:</p>
+</div>
+<div class = "ptextarea">
+<ul>
+
+
+  
+</ul>  
 </div>
   
 <script src = "javascript.js">
