--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ background-color: rgb(44, 47, 51);
 </div>
 <div class = "ptextarea">
 <ul>
-
-
+  <li>Non-toxic - We don't promote toxicity.</li>
+  <li>Different - Our clan doesn't just have highscoring and base events, we plan other events like manhunt, or survivor!</li>
   
 </ul>  
 </div>
