--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@ background-color: rgb(44, 47, 51);
    line-height: 1.625;
    text-align: center;
 }  
+  
+.listarea {
+   margin-top: 40px;
+   font-family: sans-serif;
+   color:white;
+   font-size: clamp(16px,2vw,20px);
+   line-height: 1.625;
+}  
 </style>
     
 </head>
@@ -40,10 +48,11 @@ background-color: rgb(44, 47, 51);
 <div class = "ptextarea">
 <p>Hello! We glady invite you to our server, Aquatic Tridents! Lead by Triton and Marblex, our clan is:</p>
 </div>
-<div class = "ptextarea">
+<div class = "listarea">
 <ul>
   <li>Non-toxic - We don't promote toxicity.</li>
-  <li>Different - Our clan doesn't just have highscoring and base events, we plan other events like manhunt, or survivor!</li>
+  <li>Fun - Our clan doesn't just have highscoring and base events, we plan other events like manhunt, or survivor!</li>
+  <li>Pleasureful - We'll help you highscore.</li>
   
 </ul>  
 </div>
