--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@ background-color: rgb(44, 47, 51);
   
 </ul>  
 </div>
+
+<div class = "ptextarea">
+<p>There's much more than this. The clan is still in it's development, but sure it'll grow!</p>  
+</div>  
   
 <script src = "javascript.js">
 
