--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ background-color: rgb(44, 47, 51);
 <h1 class = "main-title">Hey there!</h1>
 
 <div class = "ptextarea">
-<p>Hello! We glady invite you to our server, Aquatic Tridents! Lead by Triton and Marblex, our clan is:</p>
+<p>Hello! We glady invite you to our Taming.io based clan, Aquatic Tridents! Lead by Triton and Marblex, our clan is:</p>
 </div>
 <div class = "listarea">
 <ul>
@@ -58,7 +58,8 @@ background-color: rgb(44, 47, 51);
 </div>
 
 <div class = "ptextarea">
-<p>There's much more than this. The clan is still in it's development, but sure it'll grow!</p>  
+<p>There's much more than this. The clan is still in it's development, but sure it'll grow!</p>
+ 
 </div>  
   
 <script src = "javascript.js">
