--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@ background-color: rgb(44, 47, 51);
    font-size: clamp(16px,2vw,20px);
    line-height: 1.625;
 }  
+
+.button {
+  
+}
+  
+  
+  
 </style>
     
 </head>
@@ -60,7 +67,7 @@ background-color: rgb(44, 47, 51);
 <div class = "ptextarea">
 <p>There's much more than this. The clan is still in it's development, but sure it'll grow!</p>
 <h4>Ready to join?</4>
-</div>  
+  <a href = "https://discord.gg/hrfBpHQtSZ"></a>
   
 <script src = "javascript.js">
 
