--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 }  
 
 body { 
-background-color: rgb(44, 47, 51);
+background-image: url('https://media.discordapp.net/attachments/881959063590699030/932695815728824370/blurred.png?width=1095&height=616');
 }
 
 .ptextarea {
@@ -42,14 +42,17 @@ background-color: rgb(44, 47, 51);
 .button {
   
 }
-  
+
+.discordcolor {   
+background-color:rgb(44, 47, 51);
+}
   
   
 </style>
     
 </head>
 <body>
- 
+  <div class = "discordcolor"> 
 <h1 class = "main-title">Hey there!</h1>
 
 <div class = "ptextarea">
@@ -67,8 +70,8 @@ background-color: rgb(44, 47, 51);
 <div class = "ptextarea">
 <p>There's much more than this. The clan is still in it's development, but sure it'll grow!</p>
 <h4>Ready to join?</4>
-  <a href = "https://discord.gg/hrfBpHQtSZ"></a>
-  
+<a href = "https://discord.gg/hrfBpHQtSZ"></a>
+  </div>  
 <script src = "javascript.js">
 
 </script>
