--- a/index.html
+++ b/index.html
@@ -40,7 +40,20 @@ background-image: url('https://media.discordapp.net/attachments/8819590635906990
 }  
 
 .button {
-  
+background-color:rgb(114, 137, 218);
+        border: none;
+        color: white;
+        padding: 5px 16px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 17px;
+        margin: 4px 76px;
+        cursor:pointer;
+     border-radius:21px;   
+}
+.button:hover{
+background-color:rgb(75, 95, 163);
 }
 
 .discordcolor {   
@@ -70,7 +83,7 @@ background-color:rgb(44, 47, 51);
 <div class = "ptextarea">
 <p>There's much more than this. The clan is still in it's development, but sure it'll grow!</p>
 <h4>Ready to join?</4>
-<a href = "https://discord.gg/hrfBpHQtSZ"></a>
+<br><a href = "https://discord.gg/hrfBpHQtSZ" class = "button"><strong>Let's Go!<strong></a>
   </div>  
 <script src = "javascript.js">
 
