--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ background-color:rgb(44, 47, 51);
 <div class = "ptextarea">
 <p>There's much more than this. The clan is still in it's development, but sure it'll grow!</p>
 <h4>Ready to join?</4>
-<br><a href = "https://discord.gg/hrfBpHQtSZ" class = "button"><strong>Let's Go!<strong></a>
+<br><br><a href = "https://discord.gg/hrfBpHQtSZ" class = "button"><strong>Let's Go!<strong></a>
   </div>  
 <script src = "javascript.js">
 
