--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@ border-radius:21px;
 <ul>
   <li>Non-toxic - We don't promote toxicity.</li>
   <li>Fun - Our clan doesn't just have highscoring and base events, we plan other events like manhunt, or survivor!</li>
-  <li>Pleasureful - We'll help you highscore.</li>
+  <li>Pleasurable - We'll help you highscore.</li>
   
 </ul>  
 </div>
 
 <div class = "ptextarea">
-<p>There's much more than this. The clan is still in it's development, but sure it'll grow!</p>
+<p>There's much more than this. The clan is still in development, but it'll definitely grow!</p>
 <h4>Ready to join?</4>
 <br><br><a href = "https://discord.gg/hrfBpHQtSZ" class = "button"><strong>Let's Go!<strong></a>
   </div>  
