--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ border-radius:21px;
 <ul>
   <li>Non-toxic - We don't promote toxicity.</li>
   <li>Fun - Our clan doesn't just have highscoring and base events, we plan other events like manhunt, or survivor!</li>
-  <li>Pleasurable - We'll help you highscore.</li>
+  <li>Diverse - We accept people of all skill levels, and we'll help you get better.</li>
   
 </ul>  
 </div>
