--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
    text-rendering: geometricPrecision;
    color: white;
    text-align: center;
-   transform: scaleX(1.2);
 }  
 
 body { 
@@ -61,6 +60,16 @@ background-color:rgb(75, 95, 163);
 background-color:rgb(44, 47, 51);
 border-radius:21px; 
 }
+
+
+.imgone {
+transform:rotate(-15deg);
+}
+.imgtwo {
+position:absolute;
+right:2%;
+transform:rotate(-170deg);
+}
   
   
 </style>
@@ -81,6 +90,9 @@ border-radius:21px;
   
 </ul>  
 </div>
+
+<img src = "https://taming.io/img/item/diamond-spear.png" class = "imgone" alt = "d_spear" height = "70">
+<img src = "https://taming.io/img/item/diamond-katana.png" class = "imgtwo" alt = "d_spear" height = "70">
 
 <div class = "ptextarea">
 <p>There's much more than this. The clan is still in development, but it'll definitely grow!</p>
