--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@ background-image: url('https://media.discordapp.net/attachments/8819590635906990
 
 .button {
 background-color:rgb(114, 137, 218);
-        border: none;
         color: white;
         padding: 10px 80px;
         text-align: center;
@@ -50,15 +49,18 @@ background-color:rgb(114, 137, 218);
         font-size: 17px;
         margin: 4px 76px;
         cursor:pointer;
-     border-radius:30px;   
+        border-radius:30px;   
+		background-image: linear-gradient(to bottom right, rgb(3, 111, 252), cyan);  
 }
 .button:hover{
 background-color:rgb(75, 95, 163);
 }
 
 .discordcolor {   
-background-color:rgb(44, 47, 51);
-border-radius:21px; 
+background-color:rgb(44, 47, 51); 
+border: 5px solid transparent; 
+border-image: linear-gradient(to right, rgb(3, 123, 252), cyan); 
+border-image-slice: 1; 
 }
 
 
