--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 }  
 
 body { 
+background-attachment: fixed;
 background-image: url('https://media.discordapp.net/attachments/881959063590699030/935587617221783672/unknown.png?width=1357&height=823');
+background-position: center center;
+background-size: cover;
 }
 
 .ptextarea {
