--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ background-color:rgb(44, 47, 51);
 border: 5px solid transparent; 
 border-image: linear-gradient(to right, rgb(3, 123, 252), cyan); 
 border-image-slice: 1;
-border-left: 10px solid #FFFF00;
-border-right:10px solid rgb(255, 0, 255);
+border-top: 10px solid cyan;
+border-bottom:10px solid blue;
 background-image: 
-        linear-gradient(#FFFF00, rgb(255, 0, 255)),
-        linear-gradient(rgb(247, 255, 0), rgb(255, 0, 255));
+        linear-gradient(cyan, blue),
+        linear-gradient(cyan, blue);
 background-size:10px 100%;
 background-repeat:no-repeat;
 border-radius:10px; 
